Fixed view height on mobile.

--- a/app/src/pages/capture/capture.scss
+++ b/app/src/pages/capture/capture.scss
@@ -2,14 +2,14 @@
 
 .mat-drawer-container {
   background-color: black;
-  height: 100vh;
+  height: 100%;
 
   .mat-sidenav {
     width: 375px;
   }
 }
 
-camera-preview {
+app-camera-preview {
   width: 100%;
   height: 100%;
   display: block;
