--- a/app/src/pages/translate/translate.scss
+++ b/app/src/pages/translate/translate.scss
@@ -1,8 +1,7 @@
 @import 'components';
 
 :host {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   display: block;
 }
 
