--- a/app/src/style/_components.scss
+++ b/app/src/style/_components.scss
@@ -1,5 +1,5 @@
 @mixin centered-page {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
