--- a/app/src/style/main.scss
+++ b/app/src/style/main.scss
@@ -1,4 +1,9 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
